Add OCSP_check_validity() RetVal documentation
CLA: trivial

There is currently no documentation on what values OCSP_check_validity() returns to indicate success or failure, or what would constitute a successful return. Without it, one would need to search the OpenSSL source code to determine the behavior of the function. This change adds such explanatory documentation.

--- a/doc/man3/OCSP_resp_find_status.pod
+++ b/doc/man3/OCSP_resp_find_status.pod
@@ -156,6 +156,10 @@ occurred.
 OCSP_resp_get0_signer() returns 1 if the signing certificate was located,
 or 0 on error.
 
+OCSP_check_validity() returns 1 if B<thisupd> and B<nextupd> are valid time 
+bounds for an OCSP response given the current time and the constraints
+specified by B<sec> and B<maxsec>; otherwise, returns 0 to indicate an error.
+
 OCSP_basic_verify() returns 1 on success, 0 on error, or -1 on fatal error such
 as malloc failure.
 
