--- a/doc/man3/OCSP_resp_find_status.pod
+++ b/doc/man3/OCSP_resp_find_status.pod
@@ -157,8 +157,8 @@ OCSP_resp_get0_signer() returns 1 if the signing certificate was located,
 or 0 on error.
 
 OCSP_check_validity() returns 1 if B<thisupd> and B<nextupd> are valid time 
-bounds for an OCSP response given the current time and the constraints
-specified by B<sec> and B<maxsec>; otherwise, returns 0 to indicate an error.
+values for an OCSP response given the current time and the constraints
+specified by B<sec> and B<maxsec>, or 0 to indicate an error.
 
 OCSP_basic_verify() returns 1 on success, 0 on error, or -1 on fatal error such
 as malloc failure.
