--- a/doc/man7/OSSL_PROVIDER-legacy.pod
+++ b/doc/man7/OSSL_PROVIDER-legacy.pod
@@ -15,14 +15,10 @@ We can consider this the retirement home of cryptographic algorithms.
 
 =head2 Properties
 
-The implementations in this provider specifically have these property
+The implementations in this provider specifically have this property
 defined:
 
-=over 4
-
-"provider=legacy"
-
-=back
+    provider=legacy
 
 It may be used in a property query string with fetching functions such as
 L<EVP_MD_fetch(3)> or L<EVP_CIPHER_fetch(3)>, as well as with other
