--- a/doc/man3/OPENSSL_hexchar2int.pod
+++ b/doc/man3/OPENSSL_hexchar2int.pod
@@ -19,7 +19,6 @@ OPENSSL_buf2hexstr_ex, OPENSSL_buf2hexstr
                            const unsigned char *buf, long buflen);
  char *OPENSSL_buf2hexstr(const unsigned char *buf, long buflen);
 
-
 =head1 DESCRIPTION
 
 OPENSSL_hexchar2int() converts a hexadecimal character to its numeric
@@ -60,12 +59,12 @@ or -1 on error.
 OPENSSL_buf2hexstr() and OPENSSL_hexstr2buf()
 return a pointer to allocated memory, or NULL on error.
 
-OPENSSL_buf2hexstr_ex() and OPENSSL_hexstr2buf_ex()
-return 1 on success, or 0 on error.
+OPENSSL_buf2hexstr_ex() and OPENSSL_hexstr2buf_ex() return 1 on success,
+or 0 on error.
 
 =head1 COPYRIGHT
 
-Copyright 2016-2020 The OpenSSL Project Authors. All Rights Reserved.
+Copyright 2016-2019 The OpenSSL Project Authors. All Rights Reserved.
 
 Licensed under the Apache License 2.0 (the "License").  You may not use
 this file except in compliance with the License.  You can obtain a copy
