fixup! Fix ERR_print_errors so that it matches the documented format in doc/man3/ERR_error_string.pod

--- a/doc/man3/OPENSSL_hexchar2int.pod
+++ b/doc/man3/OPENSSL_hexchar2int.pod
@@ -59,8 +59,8 @@ or -1 on error.
 OPENSSL_buf2hexstr() and OPENSSL_hexstr2buf()
 return a pointer to allocated memory, or NULL on error.
 
-OPENSSL_buf2hexstr_ex() and OPENSSL_hexstr2buf_ex() return 1 on success,
-or 0 on error.
+OPENSSL_buf2hexstr_ex() and OPENSSL_hexstr2buf_ex() return 1 on
+success, or 0 on error.
 
 =head1 COPYRIGHT
 
