--- a/doc/man7/OSSL_PROVIDER-FIPS.pod
+++ b/doc/man7/OSSL_PROVIDER-FIPS.pod
@@ -16,8 +16,13 @@ accredited testing laboratory.
 The implementations in this provider specifically have these properties
 defined:
 
-    provider=default
-    fips=yes
+=over 4
+
+"provider=default"
+
+"fips=yes"
+
+=back
 
 It may be used in a property query string with fetching functions such as
 L<EVP_MD_fetch(3)> or L<EVP_CIPHER_fetch(3)>, as well as with other
