--- a/doc/man7/OSSL_PROVIDER-default.pod
+++ b/doc/man7/OSSL_PROVIDER-default.pod
@@ -15,7 +15,11 @@ provider has been loaded.
 The implementations in this provider specifically have this property
 defined:
 
-    provider=default
+=over 4
+
+"provider=default"
+
+=back
 
 It may be used in a property query string with fetching functions such as
 L<EVP_MD_fetch(3)> or L<EVP_CIPHER_fetch(3)>, as well as with other
