--- a/doc/man3/EVP_KDF.pod
+++ b/doc/man3/EVP_KDF.pod
@@ -251,16 +251,7 @@ supported by the KDF algorithm.
 
 =head1 SEE ALSO
 
-L<EVP_KDF-HKDF(7)>
-L<EVP_KDF-KB(7)>
-L<EVP_KDF-KRB5KDF(7)>
-L<EVP_KDF-PBKDF2(7)>
-L<EVP_KDF-SCRYPT(7)>
-L<EVP_KDF-SS(7)>
-L<EVP_KDF-SSHKDF(7)>
-L<EVP_KDF-TLS1_PRF(7)>
-L<EVP_KDF-X942(7)>
-L<EVP_KDF-X963(7)>
+L<OSSL_PROVIDER-default(7)/Key Derivation Function (KDF)>
 
 =head1 HISTORY
 
