--- a/doc/man3/CONF_modules_load_file.pod
+++ b/doc/man3/CONF_modules_load_file.pod
@@ -122,7 +122,8 @@ Load and parse configuration file manually, custom error handling:
      fprintf(stderr, "Error opening configuration file\n");
      /* Other missing configuration file behaviour */
  } else {
-     cnf = NCONF_new_with_libctx(libctx, NULL);
+     cnf = NCONF_new(libctx);
+     NCONF_set_libctx(cnf, libctx);
      if (NCONF_load_fp(cnf, fp, &eline) == 0) {
          fprintf(stderr, "Error on line %ld of configuration file\n", eline);
          ERR_print_errors_fp(stderr);
@@ -140,7 +141,7 @@ Load and parse configuration file manually, custom error handling:
 
 L<config(5)>,
 L<OPENSSL_config(3)>,
-L<NCONF_new_with_libctx(3)>
+L<NCONF_new(3)>
 
 =head1 COPYRIGHT
 
