fixup! DOCS: add openssl-core_numbers.h(7)

--- a/doc/man7/openssl-core_numbers.h.pod
+++ b/doc/man7/openssl-core_numbers.h.pod
@@ -3,7 +3,7 @@
 =head1 NAME
 
 openssl/core_numbers.h
-- OpenSSL provider interface numbers and function types
+- OpenSSL provider dispatch numbers and function types
 
 =head1 SYNOPSIS
 
