--- a/doc/man7/openssl-core_names.h.pod
+++ b/doc/man7/openssl-core_names.h.pod
@@ -20,7 +20,8 @@ provide (listed in those provider manuals).
 
 =head1 SEE ALSO
 
-L<OSSL_PROVIDER-default(7)>, L<OSSL_PROVIDER-FIPS(7)>
+L<OSSL_PROVIDER-default(7)>, L<OSSL_PROVIDER-FIPS(7)>,
+L<OSSL_PROVIDER-legacy(7)>
 
 =head1 HISTORY
 
@@ -47,3 +48,13 @@ However, authors of provider that implement their own variants of
 algorithms that OpenSSL providers support will want to pay attention
 to the names provided in this header to work in a compatible manner.
 
+=head1 COPYRIGHT
+
+Copyright 2020 The OpenSSL Project Authors. All Rights Reserved.
+
+Licensed under the Apache License 2.0 (the "License").  You may not use
+this file except in compliance with the License.  You can obtain a copy
+in the file LICENSE in the source distribution or at
+L<https://www.openssl.org/source/license.html>.
+
+=cut
