--- a/doc/man3/EVP_PKEY_copy_parameters.pod
+++ b/doc/man3/EVP_PKEY_copy_parameters.pod
@@ -47,7 +47,9 @@ EVP_PKEY_eq() can also be used to determine if a private key matches
 a public key.
 
 EVP_PKEY_cmp() and EVP_PKEY_cmp_parameters() differ in their return values 
-compared to other _cmp() functions.
+compared to other _cmp() functions. They are aliases for EVP_PKEY_eq() and 
+EVP_PKEY_parameters_eq() functions provided for backwards compatibility 
+with existing applications.
 
 =head1 RETURN VALUES
 
@@ -70,15 +72,14 @@ L<EVP_PKEY_keygen(3)>
 
 =head1 HISTORY
 
-The function EVP_PKEY_cmp was deprecated and renamed to B<EVP_PKEY_eq> and
-EVP_PKEY_cmp_parameters was deprecated and renamed to B<EVP_PKEY_parameters_eq>
-(without changing semantics) in OpenSSL 3.0.
-This was done to avoid confusion on their return values with other _cmp()
-functions that return 0 in case their arguments are equal.
+EVP_PKEY_eq() and EVP_PKEY_parameters_eq() were added in OpenSSL 3.0 to 
+avoid confusion on the return values of EVP_PKEY_cmp() and 
+EVP_PKEY_cmp_parameters() which unlike other _cmp()
+functions do not return 0 in case their arguments are equal.
 
 =head1 COPYRIGHT
 
-Copyright 2006-2016 The OpenSSL Project Authors. All Rights Reserved.
+Copyright 2006-2020 The OpenSSL Project Authors. All Rights Reserved.
 
 Licensed under the Apache License 2.0 (the "License").  You may not use
 this file except in compliance with the License.  You can obtain a copy
