--- a/doc/man7/EVP_PKEY-DH.pod
+++ b/doc/man7/EVP_PKEY-DH.pod
@@ -56,7 +56,7 @@ provider will instead choose a named safe prime group based on the size of I<p>.
 
 =item "tls-encoded-pt" (B<OSSL_PKEY_PARAM_TLS_ENCODED_PT>) <octet string>
 
-Used for getting and setting the encoding of the DH public key as in a key
+Used for getting and setting the encoding of the DH public key used in a key
 exchange message for the TLS protocol.
 
 =back
