--- a/doc/man7/EVP_PKEY-EC.pod
+++ b/doc/man7/EVP_PKEY-EC.pod
@@ -41,7 +41,7 @@ The private key value.
 
 =item "tls-encoded-pt" (B<OSSL_PKEY_PARAM_TLS_ENCODED_PT>) <octet string>
 
-Used for getting and setting the encoding of the EC public key as in  key
+Used for getting and setting the encoding of the EC public key used in  key
 exchange message for the TLS protocol.
 
 =back
