--- a/doc/man7/EVP_PKEY-X25519.pod
+++ b/doc/man7/EVP_PKEY-X25519.pod
@@ -36,7 +36,7 @@ The private key value.
 
 =item "tls-encoded-pt" (B<OSSL_PKEY_PARAM_TLS_ENCODED_PT>) <octet string>
 
-Used for getting and setting the encoding of the public key as in a key exchange
+Used for getting and setting the encoding of the public key used in a key exchange
 message for the TLS protocol.
 
 =back
